<resources>
    <string name="app_name">Calculator</string>
    <string name="label_number">123</string>
    <string name="label_one">1</string>
    <string name="label_four">4</string>
    <string name="label_seven">7</string>
    <string name="label_dot">.</string>
    <string name="label_two">2</string>
    <string name="label_five">5</string>
    <string name="label_eight">8</string>
    <string name="label_zero">0</string>
    <string name="label_three">3</string>
    <string name="label_six">6</string>
    <string name="label_nine">9</string>
    <string name="label_clear">C</string>
    <string name="label_plus">+</string>
    <string name="label_min">-</string>
    <string name="label_multiplication">x</string>
    <string name="label_division">/</string>
    <string name="label_equals">=</string>
</resources>
